--- a/config/oculus.properties
+++ b/config/oculus.properties
@@ -1,11 +1,7 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-<<<<<<< Updated upstream
-#Sat Nov 05 23:42:27 CET 2022
-=======
-#Sun Nov 06 01:22:50 CET 2022
->>>>>>> Stashed changes
+#Sun Nov 06 15:02:11 CET 2022
 disableUpdateMessage=false
 enableDebugOptions=false
 maxShadowRenderDistance=32
-shaderPack=
-enableShaders=false
+shaderPack=Solas+Shader+V1.2.zip
+enableShaders=true
