--- a/config/oculus.properties
+++ b/config/oculus.properties
@@ -1,7 +1,7 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Sun Nov 06 15:02:11 CET 2022
+#Mon Nov 07 15:15:23 CET 2022
 disableUpdateMessage=false
 enableDebugOptions=false
 maxShadowRenderDistance=32
 shaderPack=Solas+Shader+V1.2.zip
-enableShaders=true
+enableShaders=false
