--- a/imgui.ini
+++ b/imgui.ini
@@ -68,3 +68,13 @@ Pos=3345,51
 Size=495,450
 Collapsed=0
 
+[Window][263248]
+Pos=3345,51
+Size=495,450
+Collapsed=0
+
+[Window][458780]
+Pos=530,51
+Size=495,450
+Collapsed=0
+
