--- a/config/oculus.properties
+++ b/config/oculus.properties
@@ -1,7 +1,7 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Mon Nov 07 21:10:15 CET 2022
+#Mon Nov 07 23:58:40 CET 2022
 disableUpdateMessage=false
 enableDebugOptions=false
 maxShadowRenderDistance=32
-shaderPack=Solas+Shader+V1.2.zip
-enableShaders=false
+shaderPack=\u00A7r\u00A7lAstra\u00A74\u00A7lLex\u00A7r\u00A7l_(\u00A74\u00A7lBSL\u00A7r\u00A7l_Edit)_By_LexBoosT_\u00A74\u00A7lV67.0\u00A7r\u00A7l.zip
+enableShaders=true
