--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -1,7 +1,6 @@
 Minecraft
 Alex's Mobs
 Aquaculture 2
-Arclight
 Artifacts
 Backpacked
 Biome Makeover
@@ -23,7 +22,6 @@ Fantasy's Furniture
 Farmer's Delight
 Goblin Traders
 Guard Villagers
-Immersive Armors
 Infernal Expansion
 Integrated Dungeons and Structures
 It Takes A Pillage
@@ -64,3 +62,8 @@ Create: Crystal Clear
 Recall
 Shield Expansion
 Infinity Buttons
+Knight Quest
+KubeJS
+Macaw's Roofs
+Macaw's Roofs - BOP
+Macaw's Roofs - BYG
