--- a/defaultconfigs/scalinghealth-server.toml
+++ b/defaultconfigs/scalinghealth-server.toml
@@ -6,11 +6,11 @@
 	#Enable player bonus hp by xp.
 	xpAddHealth = false
 	#Enable player regen hp by crystals.
-	crystalsRegenHealth = true
+	crystalsRegenHealth = false
 	#Enable pet add hp by crystals.
-	crystalsAddPetHealth = true
+	crystalsAddPetHealth = false
 	#Enable player add damage by crystals.
-	crystalsAddDamage = true
+	crystalsAddDamage = false
 	#Enable ore gen of health crystals. Still drops as loot.
 	hpCrystalsOreGen = false
 	#Enable ore gen of power crystals. Still drops as loot.
@@ -26,7 +26,7 @@
 	#Enable difficulty system. If disabled, everything will have 0 difficulty.
 	enableDifficulty = true
 	#Enable blights. If disabled, no blights will spawn.
-	enableBlights = true
+	enableBlights = false
 
 #Debug settings are intended for tuning configs or diagnosing issues.
 #They may decrease performance and should be disabled for normal play.
