--- a/config/oculus.properties
+++ b/config/oculus.properties
@@ -1,7 +1,7 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Fri Nov 11 12:08:24 CET 2022
+#Sun Nov 13 21:20:36 CET 2022
 disableUpdateMessage=false
 enableDebugOptions=false
-maxShadowRenderDistance=32
-shaderPack=\u00A7r\u00A7lAstra\u00A74\u00A7lLex\u00A7r\u00A7l_(\u00A74\u00A7lBSL\u00A7r\u00A7l_Edit)_By_LexBoosT_\u00A74\u00A7lV67.0\u00A7r\u00A7l.zip
+maxShadowRenderDistance=30
+shaderPack=continuum-2.0.5.zip
 enableShaders=true
