GUI & Mod updates, config tweaks

--- a/config/Obscuria/aquamirae-client.toml
+++ b/config/Obscuria/aquamirae-client.toml
@@ -1,7 +1,7 @@
 
-[Ambient]
-	spawnParticles = true
-	playAmbientSounds = true
-	playBiomeMusic = true
-	playBossMusic = true
+[IceMazeAmbient]
+	SpawnParticles = true
+	PlayAmbientSounds = true
+	PlayBiomeTheme = true
+	PlayCorneliaTheme = true
 
