--- a/config/oculus.properties
+++ b/config/oculus.properties
@@ -1,7 +1,7 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Tue Nov 15 22:14:02 CET 2022
+#Fri Nov 18 10:19:48 CET 2022
 disableUpdateMessage=false
 enableDebugOptions=false
 maxShadowRenderDistance=30
 shaderPack=continuum-2.0.5.zip
-enableShaders=true
+enableShaders=false
