--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -58,3 +58,7 @@ spirit:soul_transmutation
 alexsmobs:capsid
 ftbquests:loot_crate
 ftbquests:quest
+sushigocrafting:cutting_board
+sushigocrafting:fermenting_barrel
+sushigocrafting:rice_cooker
+sushigocrafting:roller
