--- a/config/oculus.properties
+++ b/config/oculus.properties
@@ -1,7 +1,7 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Fri Nov 18 10:19:48 CET 2022
+#Sat Nov 19 11:40:37 CET 2022
 disableUpdateMessage=false
 enableDebugOptions=false
 maxShadowRenderDistance=30
-shaderPack=continuum-2.0.5.zip
+shaderPack=Solas+Shader+V1.2.zip
 enableShaders=false
