--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,12 @@ options.txt
 imgui.ini
 logs/kubejs/startup.txt
 logs/kubejs/client.txt
+config/oculus.properties
+config/sound_physics_remastered/occlusion.properties
+config/sound_physics_remastered/reflectivity.properties
+config/sound_physics_remastered/soundphysics.properties
+logs/kubejs/client.txt
+logs/kubejs/server.txt
+logs/kubejs/startup.txt
+minecraftinstance.json
+config/byg/backups/last_working_configs_backup.zip
