Added cooking for blockheads

--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -62,3 +62,4 @@ sushigocrafting:cutting_board
 sushigocrafting:fermenting_barrel
 sushigocrafting:rice_cooker
 sushigocrafting:roller
+cookingforblockheads:cow_jar
