--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -63,3 +63,4 @@ sushigocrafting:fermenting_barrel
 sushigocrafting:rice_cooker
 sushigocrafting:roller
 cookingforblockheads:cow_jar
+extractinator:extractinating
