--- a/config/bettercombat/server.json5
+++ b/config/bettercombat/server.json5
@@ -21,6 +21,12 @@
 	"dual_wielding_main_hand_damage_multiplier": 1.0,
 	// Total multiplier, (examples: +30% = 1.3, -30% = 0.7)
 	"dual_wielding_off_hand_damage_multiplier": 1.0,
+	// Entities with `HOSTILE` relation will be hit by undirected weapon swings. NOTE: Vanilla sweeping will still happen, if not disabled via `allow_sweeping`
+	"player_relation_to_teamless_players": "NEUTRAL",
+	"player_relation_to_villagers": "NEUTRAL",
+	"player_relation_to_passives": "HOSTILE",
+	"player_relation_to_hostiles": "HOSTILE",
+	"player_relation_to_other": "HOSTILE",
 	// Try to guess and apply a preset for items without weapon attributes data file
 	"fallback_compatibility_enabled": true,
 	// Allow printing the content of weapon attributes registry
