--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ minecraftinstance.json
 config/byg/backups/last_working_configs_backup.zip
 minecraftinstance.json
 .curseclient
+minecraftinstance.json
