Alpha of silverlight beta, tweaks

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -52,7 +52,6 @@ Unidentified Enchantments
 Create Stuff & Additions
 Create: Connected Block Textures
 Spirit
-Vitalize
 Aquamirae
 Obscure API
 Deeper and Darker
@@ -66,7 +65,6 @@ Knight Quest
 KubeJS
 Macaw's Roofs
 Macaw's Roofs - BOP
-Macaw's Roofs - BYG
 Alarms
 Compat O' Plenty
 Labels
@@ -77,3 +75,8 @@ CookingForBlockheads
 Trolldom
 Extractinator
 Vinery
+'Dustrial Decor
+Alex's Delight
+Critters and Companions
+Domum Ornamentum
+Silverlight
