--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -64,3 +64,4 @@ sushigocrafting:rice_cooker
 sushigocrafting:roller
 cookingforblockheads:cow_jar
 extractinator:extractinating
+domum_ornamentum:architects_cutter
