Mod, config & quest updates

--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -65,3 +65,4 @@ sushigocrafting:roller
 cookingforblockheads:cow_jar
 extractinator:extractinating
 domum_ornamentum:architects_cutter
+nethersdelight:composition
