--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -72,7 +72,6 @@ Spice of Life: Carrot Edition
 Sushi Go Crafting
 CookingForBlockheads
 Trolldom
-Extractinator
 Vinery
 'Dustrial Decor
 Alex's Delight
@@ -82,3 +81,5 @@ Silverlight
 Xaerominimap
 Nether's Delight
 Vitalize
+Create: Alloyed
+Xaero's World Map
