Added Silverlight mod, updated quests (getting started)

--- a/config/jei/ingredient-list-mod-sort-order.ini
+++ b/config/jei/ingredient-list-mod-sort-order.ini
@@ -72,7 +72,6 @@ Spice of Life: Carrot Edition
 Sushi Go Crafting
 CookingForBlockheads
 Trolldom
-Extractinator
 Vinery
 'Dustrial Decor
 Alex's Delight
@@ -83,3 +82,6 @@ Xaerominimap
 Nether's Delight
 Vitalize
 Xaero's World Map
+Create: Alloyed
+Create: Steam 'n Rails
+Extended Cogs
