--- a/config/sound_physics_remastered/soundphysics.properties
+++ b/config/sound_physics_remastered/soundphysics.properties
@@ -1,12 +1,12 @@
 #
-#Mon Dec 19 22:38:57 CET 2022
+#Tue Dec 20 21:59:17 CET 2022
 occlusion_logging=false
 sound_direction_evaluation=true
 render_sound_bounces=false
 block_absorption=1.0
 default_block_occlusion_factor=1.0
-environment_evaluation_ray_count=32
 enabled=true
+environment_evaluation_ray_count=32
 air_absorption=1.0
 render_occlusion=false
 debug_logging=false
@@ -24,6 +24,7 @@ reverb_brightness=1.0
 sound_blacklist_regex=(.*rain.*)|(.*lightning_bolt.*)
 update_moving_sounds=false
 simple_voice_chat_hear_self=false
+sound_update_interval=5
 occlusion_variation=0.35
 non_full_block_occlusion_factor=0.25
 simple_voice_chat_integration=true
