--- a/config/oculus.properties
+++ b/config/oculus.properties
@@ -1,7 +1,7 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Sat Dec 17 13:33:58 CET 2022
+#Tue Dec 27 01:05:43 CET 2022
 disableUpdateMessage=false
 enableDebugOptions=false
 maxShadowRenderDistance=30
-shaderPack=\u00A7r\u00A7lAstra\u00A74\u00A7lLex\u00A7r\u00A7l_(\u00A74\u00A7lBSL\u00A7r\u00A7l_Edit)_By_LexBoosT_\u00A74\u00A7lV67.0\u00A7r\u00A7l.zip
-enableShaders=false
+shaderPack=Lagless-Shaders-Standard-1.10.2.zip
+enableShaders=true
