--- a/config/Obscuria/obscure-api-client.toml
+++ b/config/Obscuria/obscure-api-client.toml
@@ -5,3 +5,11 @@
 	#Display equipment attributes in tooltips
 	"Equipment Icons" = true
 
+[General]
+	#Conditions for displaying new message notification:
+	# 1 - Once per session when entering the world
+	# 2 - Once per session with Obscure Book in inventory
+	# 3 - Never
+	#Range: 1 ~ 3
+	"Message Notification" = 2
+
