--- a/config/quark-common.toml
+++ b/config/quark-common.toml
@@ -1462,7 +1462,7 @@
 		"Vertical Shift" = 0
 
 [oddities]
-	"Totem Of Holding" = true
+	"Totem Of Holding" = false
 	"Tiny Potato" = true
 	Pipes = true
 	"Matrix Enchanting" = false
