--- a/config/railways-common.toml
+++ b/config/railways-common.toml
@@ -1,6 +1,8 @@
 
-#General settings
-[general]
-	#sorceror
-	hibye = false
+#Semaphore settings
+[semaphore]
+	#Simplified semaphore placement
+	simplifiedSemaphorePlacement = true
+	#Whether semaphore color order is reversed when the semaphores are oriented upside-down
+	semaphoresFlipYellowOrder = false
 
