--- a/config/supplementaries-common.toml
+++ b/config/supplementaries-common.toml
@@ -49,6 +49,8 @@
 		block_side_attachment = true
 		#Makes sliding down ropes as fast as free falling, still negating fall damage
 		slide_on_fall = true
+		#In case you want to disable supplementaries ropes you can specify here another mod rope and they will be used for rope arrows and in mineshafts instead
+		rope_override = "supplementaries:rope"
 
 	[blocks.pedestal]
 		#If enabled end crystals placed on a pedestals will provide an enchantment power bonus equivalent to 3 bookshelves
@@ -250,6 +252,15 @@
 		#Range: 0.0 ~ 10.0
 		red_merchant_spawn_multiplier = 1.0
 
+	[spawns.basalt_ash]
+		enabled = true
+		#Attempts at every patch to spawn 1 block. Increases average patch size
+		#Range: 1 ~ 1000
+		attempts_per_patch = 36
+		#Spawn attempts per chunk. Increases spawn frequency
+		#Range: 0 ~ 100
+		spawn_attempts = 15
+
 #Vanilla tweaks
 [tweaks]
 
@@ -373,6 +384,8 @@
 		#Increase this number to alter the probability for a Skeleton with quiver to spawn. Note that this also depends on local difficulty so you wont ever see them on easy and very rarely on normal. Similar logic to equipment
 		#Range: 0.0 ~ 1.0
 		quiver_skeleton_chance = 0.2
+		#Allows quiver to only be used when in offhand or in curio slot
+		only_works_in_curio = false
 
 	[items.bubble_blower]
 		#Amount of soap consumed per bubble block placed
@@ -385,8 +398,6 @@
 		bypass_when_on = "MAIN_HAND"
 
 	[items.rope_arrow]
-		#In case you want to disable supplementaries ropes you can specify here another mod rope and they will be used for rope arrows instead
-		rope_override = "supplementaries:rope"
 		#Max number of robe items allowed to be stored inside a rope arrow
 		#Range: 1 ~ 256
 		capacity = 32
@@ -432,6 +443,10 @@
 		stasis_deceleration = 0.9625
 		#Allow enderman to intercept any slingshot projectile
 		unrestricted_enderman_intercept = true
+
+	[items.soap]
+		#Dyed Bock types that cannot be cleaned with soap
+		clean_blacklist = ["minecraft:glazed_terracotta"]
 
 #General settings
 [general]
